infrastructure/kubernetes/vpn-egress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-egress
  namespace: vpn-egress
spec:
  type: ClusterIP
  selector:
    app: vpn-egress
  ports:
  - port: 8888
    targetPort: http-proxy
    protocol: TCP
    name: http-proxy
